[package]
name = "all-contributors-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.26", features = ["cargo"] }
inquire = "0.5.2"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.88"
ureq = "2.5.0"
